# geoviz-visualizer

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Viewport.cpp  Viewport.h  openglfunction.h  readme.md  resources.qrc  test.py
cameras/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
initializer/: demloader.cpp  demloader.h
lights/: Light.cpp  Light.h
materials/: Displacement.frag  Displacement.tesc  Displacement.tese  Displacement.vert  MapSurface.cpp  MapSurface.frag  MapSurface.h  MapSurface.tesc  MapSurface.tese  MapSurface.vert  Material.h  Phong.cpp  Phong.frag  Phong.h  Phong.vert  displacement.cpp  displacement.h  rand.glsl  simplex.glsl
models/: Model.h  Plane.cpp  Plane.h  Terrain.cpp  Terrain.h
